# Eurobot-2025-Localization

./: .gitignore
docker/local/: Dockerfile  docker-compose.yaml
docker/local-ros1/: Dockerfile  docker-compose.yaml
docker/local-ros2/: Dockerfile  docker-compose.yaml
docker/local-ros2/OdomComm/: build_and_run.sh  pull_and_run.sh
docker/testBot/: Dockerfile  docker-compose.yaml
docker/testBot/OdomComm/: _run.sh  pull_and_run.sh  yellow_run.sh
localization-devel-ws/: .gitignore  Localization2025.json  cust_foxglove_launch.py  record.launch  usb.sh
localization-devel-ws/ekf/: package.xml  setup.py
localization-devel-ws/ekf/ekf/: ekf_node.py
localization-devel-ws/ekf/launch/: bag_test.launch  bagplay.launch  real.launch  rplidar_ns.launch  run.launch  yellow.launch
localization-devel-ws/local/local_filter/: CMakeLists.txt  package.xml
localization-devel-ws/rival/draw_path/: CMakeLists.txt  package.xml
localization-devel-ws/rival/rival_localization/: CMakeLists.txt  package.xml
localization-devel-ws/rival/rival_localization/config/: rival_localization.yaml
localization-devel-ws/rival/rival_localization/include/rival_localization/: rival_localization.h
localization-devel-ws/rival/rival_localization/launch/: rival_localization.xml
localization-devel-ws/rival/rival_localization/launch/firmware/: view_rplidar_s3_launch.py
localization-devel-ws/rival/rival_localization/rviz/: rplidar_ros.rviz
localization-devel-ws/rival/rival_localization/src/: rival_localization.cpp
localization-ws-ros1/src/localization-devel-ws/: .gitignore  device-starter.sh
(+61 files in other folders)
